Update to build with new epubtools closing #1

--- a/book.yml
+++ b/book.yml
@@ -4,9 +4,11 @@ epub: guide.epub
 
 title: Creating eBooks with Markdown and Open Source Tools
 languages: [ en ]
-identifiers: 
+identifiers:
     - unique: true
       idstring: "urn:uuid:93aa70c2-089f-11e5-b304-477de2f6d00a"
+published:
+    date: "2017-07-06T22:15:14Z"
 creators:
     - id: author
       name: David Herron
@@ -22,13 +24,13 @@ cover:
     alt:  "AkashaEPUB Book Creators Guide"
     type: "image/png"
 
-toc: { href: "toc.html" }
+toc: { id: "toc", href: "toc.html" }
 ncx: { id: "ncx", href: "toc.ncx"  }
 
 
 stylesheets:
     - { id: "stylesheet", href: "/css/style.css" }
-#    
+#
 # javaScriptTop:
 #     - { id: 'foojs', href: 'foo/foo.js' }
 #
