--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prebuild": "mkdir -p out && akasharender copy-assets config.js",
     "build": "akasharender render config.js",
     "postbuild": "epubtools mimetype out && epubtools containerxml out book.yml && epubtools makemeta out book.yml",
+    "prebundle": "epubtools xhtml out",
     "bundle": "epubtools package out book.yml",
     "rebuild": "npm run clean && npm run build && npm run bundle",
     "check": "java -jar /Users/david/bin/epubcheck-4.0.2/epubcheck.jar guide.epub",
